tests/compile_fail/weight_attr_more_arg.stderr
error: too many arguments.
 --> $DIR/weight_attr_more_arg.rs:4:17
  |
4 |     #[weight(1, 2)]
  |                 ^
